tests/NormalTests/paczka1/fuzzy1/54838338.err
Error in line 6: GMzErb S580 96,3
Error in line 7: GMzErb A542 65,7
Error in line 8: 8FH5Pp1Tjy S580 78,3
Error in line 14: 8FH5Pp1Tjy S963 54,9
